# tum-web-lab5

./: README.md  go2web  go2web_cli.py  pyproject.toml  setup.py
go2web_app/: cli.py  commands.py  formatters.py  http_client.py  models.py  parsers.py
